--- a/main.ipynb
+++ b/main.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "9798815a",
    "metadata": {},
    "outputs": [
@@ -30,7 +30,7 @@
        "<PIL.JpegImagePlugin.JpegImageFile image mode=RGB size=400x533>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "aaf5e084",
    "metadata": {},
    "outputs": [
@@ -55,7 +55,7 @@
        "<PIL.Image.Image image mode=RGB size=299x299>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -66,17 +66,234 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d50ffca7",
+   "metadata": {},
+   "source": [
+    "# Использование предварительно обученной модели"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "0ad1c2f5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# необходимый импорт\n",
-    "from keras.applications.xception import Xception\n",
-    "from keras.applications.xception import preprocess_input\n",
-    "from keras.applications.xception import decode_predictions"
+    "from keras.applications.xception import Xception # фактическая модель\n",
+    "from keras.applications.xception import preprocess_input # функция для подготвоки изображения к испольованию моделью\n",
+    "from keras.applications.xception import decode_predictions # функцяи декодирования предсказания"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "708622a2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading data from https://storage.googleapis.com/tensorflow/keras-applications/xception/xception_weights_tf_dim_ordering_tf_kernels.h5\n",
+      "\u001b[1m91884032/91884032\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m35s\u001b[0m 0us/step\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = Xception(\n",
+    "    weights='imagenet',\n",
+    "    input_shape=(299,299, 3)\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "88d7ecf6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 299, 299, 3)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "img = load_img(fullname, target_size=(299,299))\n",
+    "x = np.array(img)\n",
+    "X = np.array([x])\n",
+    "X.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "e1ec1df5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = preprocess_input(X)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9b68859b",
+   "metadata": {},
+   "source": [
+    "## Получение прогнозов"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "645e1246",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 1s/step\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(1, 1000)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pred = model.predict(X)\n",
+    "pred.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5c4f63c7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1.3816642e-04, 5.7820540e-05, 7.1828363e-05, 5.4084048e-05,\n",
+       "       1.3338769e-04, 7.8178389e-05, 1.3208674e-04, 6.6248991e-05,\n",
+       "       5.3834105e-05, 5.3522912e-05], dtype=float32)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pred[0, :10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "d708a756",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading data from https://storage.googleapis.com/download.tensorflow.org/data/imagenet_class_index.json\n",
+      "\u001b[1m35363/35363\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 1us/step\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[[('n03595614', 'jersey', np.float32(0.8117507)),\n",
+       "  ('n04370456', 'sweatshirt', np.float32(0.026505383)),\n",
+       "  ('n03980874', 'poncho', np.float32(0.01822685)),\n",
+       "  ('n02963159', 'cardigan', np.float32(0.010136365)),\n",
+       "  ('n04599235', 'wool', np.float32(0.006794122))]]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "decode_predictions(pred)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c0d0b455",
+   "metadata": {},
+   "source": [
+    "## Дообучение модели(с переносом опыта)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d104c504",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Загружает в память изображения небольшими пакетами\n",
+    "from tensorflow.keras.preprocessing.image import ImageDataGenerator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f289f422",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_gen = ImageDataGenerator(\n",
+    "    preprocessing_function=preprocess_input # применяем к каждому изображению preprocess_input\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "15611ebd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 3068 images belonging to 10 classes.\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_ds = train_gen.flow_from_directory(\n",
+    "    \"clothing-dataset-small/train\",\n",
+    "    target_size = (150,150), # изменяем размер изображения на 150х150\n",
+    "    batch_size=32 # Загружаем изображения пакетами по 32 штуки\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "53e5761c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
