--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "id": "7211702c",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
    "id": "9798815a",
    "metadata": {},
    "outputs": [
@@ -30,7 +30,7 @@
        "<PIL.JpegImagePlugin.JpegImageFile image mode=RGB size=400x533>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "id": "aaf5e084",
    "metadata": {},
    "outputs": [
@@ -55,7 +55,7 @@
        "<PIL.Image.Image image mode=RGB size=299x299>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "0ad1c2f5",
    "metadata": {},
    "outputs": [],
@@ -87,19 +87,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
    "id": "708622a2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading data from https://storage.googleapis.com/tensorflow/keras-applications/xception/xception_weights_tf_dim_ordering_tf_kernels.h5\n",
-      "\u001b[1m91884032/91884032\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m35s\u001b[0m 0us/step\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model = Xception(\n",
     "    weights='imagenet',\n",
@@ -109,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 29,
    "id": "88d7ecf6",
    "metadata": {},
    "outputs": [
@@ -119,7 +110,7 @@
        "(1, 299, 299, 3)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 30,
    "id": "e1ec1df5",
    "metadata": {},
    "outputs": [],
@@ -151,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 31,
    "id": "645e1246",
    "metadata": {},
    "outputs": [
@@ -159,7 +150,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 1s/step\n"
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 2s/step\n"
      ]
     },
     {
@@ -168,7 +159,7 @@
        "(1, 1000)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "5c4f63c7",
    "metadata": {},
    "outputs": [
@@ -192,7 +183,7 @@
        "       5.3834105e-05, 5.3522912e-05], dtype=float32)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,18 +194,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 33,
    "id": "d708a756",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading data from https://storage.googleapis.com/download.tensorflow.org/data/imagenet_class_index.json\n",
-      "\u001b[1m35363/35363\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 1us/step\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -225,7 +208,7 @@
        "  ('n04599235', 'wool', np.float32(0.006794122))]]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "d104c504",
    "metadata": {},
    "outputs": [],
@@ -255,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "f289f422",
    "metadata": {},
    "outputs": [],
@@ -267,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 36,
    "id": "15611ebd",
    "metadata": {},
    "outputs": [
@@ -289,11 +272,295 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "53e5761c",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 341 images belonging to 10 classes.\n"
+     ]
+    }
+   ],
+   "source": [
+    "validation_gen = ImageDataGenerator(\n",
+    "    preprocessing_function = preprocess_input\n",
+    ")\n",
+    "\n",
+    "image_size = (150,150)\n",
+    "batch_size=32\n",
+    "\n",
+    "val_ds = validation_gen.flow_from_directory(\n",
+    "    \"clothing-dataset-small/validation\",\n",
+    "    target_size=image_size,\n",
+    "    batch_size=batch_size\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "c363bcc8",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "base_model = Xception(\n",
+    "    weights='imagenet',\n",
+    "    input_shape=(150, 150, 3),\n",
+    "    include_top = False # Сохраняем только сверточные слои\n",
+    ")\n",
+    "\n",
+    "base_model.trainable = False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b843b113",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# строим модель классификации одежды\n",
+    "inputs = keras.Input(shape=(150, 150, 3)) #входные изображения должны быт ь150 на 150\n",
+    "\n",
+    "base = base_model(inputs, training=False) # Использует base_model для извлеченяи высокоуровневых признаков\n",
+    "pooling = keras.layers.GlobalAveragePooling2D() # создаем объединяющий слой\n",
+    "vector =pooling(base) # Соединяем его с base\n",
+    "\n",
+    "outputs = keras.layers.Dense(10)(vector) # добавляет плотные слои размером 10 по одному элементу для каждого класса\n",
+    "\n",
+    "model = keras.Model(inputs, outputs) # объединяем входные и выходные данный в модель Keras"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7e34594c",
+   "metadata": {},
+   "source": [
+    "## Обучение модели"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "5263557c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "learning_rate = 0.01\n",
+    "optimazer = keras.optimizers.Adam(learning_rate)\n",
+    "loss = keras.losses.CategoricalCrossentropy(from_logits=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "c3e185cc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.compile(\n",
+    "    optimizer=optimazer,\n",
+    "    loss=loss,\n",
+    "    metrics=['accuracy']\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "1c12b5cc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\DS_2025\\ML_DL_clothing_classification\\venv\\lib\\site-packages\\keras\\src\\trainers\\data_adapters\\py_dataset_adapter.py:121: UserWarning: Your `PyDataset` class should call `super().__init__(**kwargs)` in its constructor. `**kwargs` can include `workers`, `use_multiprocessing`, `max_queue_size`. Do not pass these arguments to `fit()`, as they will be ignored.\n",
+      "  self._warn_if_super_not_called()\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m96/96\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m104s\u001b[0m 1s/step - accuracy: 0.5988 - loss: 1.4907 - val_accuracy: 0.7126 - val_loss: 1.0275\n",
+      "Epoch 2/10\n",
+      "\u001b[1m96/96\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m91s\u001b[0m 952ms/step - accuracy: 0.8247 - loss: 0.5347 - val_accuracy: 0.7625 - val_loss: 0.8587\n",
+      "Epoch 3/10\n",
+      "\u001b[1m96/96\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m98s\u001b[0m 1s/step - accuracy: 0.8542 - loss: 0.4145 - val_accuracy: 0.7801 - val_loss: 1.0439\n",
+      "Epoch 4/10\n",
+      "\u001b[1m96/96\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m107s\u001b[0m 1s/step - accuracy: 0.9208 - loss: 0.2333 - val_accuracy: 0.8094 - val_loss: 0.9682\n",
+      "Epoch 5/10\n",
+      "\u001b[1m96/96\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m113s\u001b[0m 1s/step - accuracy: 0.9427 - loss: 0.1518 - val_accuracy: 0.8182 - val_loss: 0.8913\n",
+      "Epoch 6/10\n",
+      "\u001b[1m96/96\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m112s\u001b[0m 1s/step - accuracy: 0.9642 - loss: 0.0984 - val_accuracy: 0.7889 - val_loss: 0.9844\n",
+      "Epoch 7/10\n",
+      "\u001b[1m96/96\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m121s\u001b[0m 1s/step - accuracy: 0.9738 - loss: 0.0801 - val_accuracy: 0.8094 - val_loss: 0.9135\n",
+      "Epoch 8/10\n",
+      "\u001b[1m96/96\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m114s\u001b[0m 1s/step - accuracy: 0.9847 - loss: 0.0577 - val_accuracy: 0.8065 - val_loss: 0.9162\n",
+      "Epoch 9/10\n",
+      "\u001b[1m96/96\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m111s\u001b[0m 1s/step - accuracy: 0.9960 - loss: 0.0270 - val_accuracy: 0.8211 - val_loss: 0.8783\n",
+      "Epoch 10/10\n",
+      "\u001b[1m96/96\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m111s\u001b[0m 1s/step - accuracy: 0.9931 - loss: 0.0293 - val_accuracy: 0.8035 - val_loss: 0.9539\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.src.callbacks.history.History at 0x20ab156beb0>"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.fit(train_ds, epochs=10, validation_data=val_ds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "54442db7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# переместим созданеи модели в функцию\n",
+    "def make_model(learning_rate):\n",
+    "  base_model = Xception(\n",
+    "    weights = 'imagenet',\n",
+    "    include_top=False,\n",
+    "    input_shape=(150,150,3))\n",
+    "\n",
+    "  base_model.trainable = False\n",
+    "\n",
+    "  inputs = keras.Input(shape=(150,150,3))\n",
+    "\n",
+    "  base = base_model(inputs, training=False)\n",
+    "  vector = keras.layers.GlobalAveragePooling2D()(base)\n",
+    "\n",
+    "  outputs = keras.layers.Dense(10)(vector)\n",
+    "\n",
+    "  model = keras.Model(inputs, outputs)\n",
+    "\n",
+    "  optimizer = keras.optimizers.Adam(learning_rate)\n",
+    "\n",
+    "  loss = keras.losses.CategoricalCrossentropy(from_logits=True)\n",
+    "\n",
+    "  model.compile(\n",
+    "    optimizer=optimizer,\n",
+    "    loss=loss,\n",
+    "    metrics=['accuracy'])\n",
+    "\n",
+    "  return model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "b1404f02",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n",
+      "\u001b[1m96/96\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m91s\u001b[0m 900ms/step - accuracy: 0.5005 - loss: 1.4784 - val_accuracy: 0.7713 - val_loss: 0.7328\n",
+      "Epoch 2/10\n",
+      "\u001b[1m96/96\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m92s\u001b[0m 956ms/step - accuracy: 0.7942 - loss: 0.6330 - val_accuracy: 0.8065 - val_loss: 0.6389\n",
+      "Epoch 3/10\n",
+      "\u001b[1m96/96\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m101s\u001b[0m 1s/step - accuracy: 0.8452 - loss: 0.4983 - val_accuracy: 0.7977 - val_loss: 0.5821\n",
+      "Epoch 4/10\n",
+      "\u001b[1m96/96\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m104s\u001b[0m 1s/step - accuracy: 0.8694 - loss: 0.4216 - val_accuracy: 0.8182 - val_loss: 0.5561\n",
+      "Epoch 5/10\n",
+      "\u001b[1m96/96\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m101s\u001b[0m 1s/step - accuracy: 0.8877 - loss: 0.3701 - val_accuracy: 0.8065 - val_loss: 0.5685\n",
+      "Epoch 6/10\n",
+      "\u001b[1m96/96\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m102s\u001b[0m 1s/step - accuracy: 0.9127 - loss: 0.3105 - val_accuracy: 0.8240 - val_loss: 0.5478\n",
+      "Epoch 7/10\n",
+      "\u001b[1m96/96\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m101s\u001b[0m 1s/step - accuracy: 0.9263 - loss: 0.2807 - val_accuracy: 0.8006 - val_loss: 0.5539\n",
+      "Epoch 8/10\n",
+      "\u001b[1m96/96\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m98s\u001b[0m 1s/step - accuracy: 0.9328 - loss: 0.2535 - val_accuracy: 0.8240 - val_loss: 0.5419\n",
+      "Epoch 9/10\n",
+      "\u001b[1m96/96\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m96s\u001b[0m 1000ms/step - accuracy: 0.9499 - loss: 0.2336 - val_accuracy: 0.8211 - val_loss: 0.5323\n",
+      "Epoch 10/10\n",
+      "\u001b[1m96/96\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m99s\u001b[0m 1s/step - accuracy: 0.9502 - loss: 0.2186 - val_accuracy: 0.8299 - val_loss: 0.5349\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.src.callbacks.history.History at 0x20aafc6b8e0>"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model = make_model(0.001)\n",
+    "model.fit(train_ds, epochs=10, validation_data=val_ds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "f1f630bd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n",
+      "\u001b[1m96/96\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m96s\u001b[0m 945ms/step - accuracy: 0.2556 - loss: 2.1056 - val_accuracy: 0.4897 - val_loss: 1.6001\n",
+      "Epoch 2/10\n",
+      "\u001b[1m96/96\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m99s\u001b[0m 1s/step - accuracy: 0.5430 - loss: 1.4373 - val_accuracy: 0.6129 - val_loss: 1.2569\n",
+      "Epoch 3/10\n",
+      "\u001b[1m96/96\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m122s\u001b[0m 1s/step - accuracy: 0.6282 - loss: 1.1873 - val_accuracy: 0.6481 - val_loss: 1.0781\n",
+      "Epoch 4/10\n",
+      "\u001b[1m96/96\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m130s\u001b[0m 1s/step - accuracy: 0.6760 - loss: 1.0179 - val_accuracy: 0.6921 - val_loss: 0.9665\n",
+      "Epoch 5/10\n",
+      "\u001b[1m96/96\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m137s\u001b[0m 1s/step - accuracy: 0.6954 - loss: 0.9331 - val_accuracy: 0.7419 - val_loss: 0.8862\n",
+      "Epoch 6/10\n",
+      "\u001b[1m96/96\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m125s\u001b[0m 1s/step - accuracy: 0.7246 - loss: 0.8487 - val_accuracy: 0.7478 - val_loss: 0.8360\n",
+      "Epoch 7/10\n",
+      "\u001b[1m96/96\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m123s\u001b[0m 1s/step - accuracy: 0.7437 - loss: 0.7947 - val_accuracy: 0.7654 - val_loss: 0.7922\n",
+      "Epoch 8/10\n",
+      "\u001b[1m96/96\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m104s\u001b[0m 1s/step - accuracy: 0.7539 - loss: 0.7468 - val_accuracy: 0.7654 - val_loss: 0.7592\n",
+      "Epoch 9/10\n",
+      "\u001b[1m96/96\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m103s\u001b[0m 1s/step - accuracy: 0.7663 - loss: 0.7254 - val_accuracy: 0.7771 - val_loss: 0.7313\n",
+      "Epoch 10/10\n",
+      "\u001b[1m96/96\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m98s\u001b[0m 1s/step - accuracy: 0.7676 - loss: 0.7026 - val_accuracy: 0.7771 - val_loss: 0.7098\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.src.callbacks.history.History at 0x20aedc4ef70>"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model = make_model(0.0001)\n",
+    "model.fit(train_ds, epochs=10, validation_data=val_ds)"
+   ]
   }
  ],
  "metadata": {
