train midel, add checkpoints

--- a/main.ipynb
+++ b/main.ipynb
@@ -431,39 +431,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "id": "54442db7",
+   "execution_count": null,
+   "id": "4a8bd8e0",
    "metadata": {},
    "outputs": [],
    "source": [
     "# переместим созданеи модели в функцию\n",
     "def make_model(learning_rate):\n",
-    "  base_model = Xception(\n",
+    "    base_model = Xception(\n",
     "    weights = 'imagenet',\n",
     "    include_top=False,\n",
     "    input_shape=(150,150,3))\n",
     "\n",
-    "  base_model.trainable = False\n",
+    "    base_model.trainable = False\n",
     "\n",
-    "  inputs = keras.Input(shape=(150,150,3))\n",
+    "    inputs = keras.Input(shape=(150,150,3))\n",
     "\n",
-    "  base = base_model(inputs, training=False)\n",
-    "  vector = keras.layers.GlobalAveragePooling2D()(base)\n",
+    "    base = base_model(inputs, training=False)\n",
+    "    vector = keras.layers.GlobalAveragePooling2D()(base)\n",
     "\n",
-    "  outputs = keras.layers.Dense(10)(vector)\n",
+    "    outputs = keras.layers.Dense(10)(vector)\n",
     "\n",
-    "  model = keras.Model(inputs, outputs)\n",
+    "    model = keras.Model(inputs, outputs)\n",
     "\n",
-    "  optimizer = keras.optimizers.Adam(learning_rate)\n",
+    "    optimizer = keras.optimizers.Adam(learning_rate)\n",
     "\n",
-    "  loss = keras.losses.CategoricalCrossentropy(from_logits=True)\n",
+    "    loss = keras.losses.CategoricalCrossentropy(from_logits=True)\n",
     "\n",
-    "  model.compile(\n",
+    "    model.compile(\n",
     "    optimizer=optimizer,\n",
     "    loss=loss,\n",
     "    metrics=['accuracy'])\n",
     "\n",
-    "  return model"
+    "    return model\n"
    ]
   },
   {
@@ -560,6 +560,240 @@
    "source": [
     "model = make_model(0.0001)\n",
     "model.fit(train_ds, epochs=10, validation_data=val_ds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "1e4a02cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n",
+      "\u001b[1m96/96\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 2s/step - accuracy: 0.7742 - loss: 0.6777"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:absl:You are saving your model as an HDF5 file via `model.save()` or `keras.saving.save_model(model)`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')` or `keras.saving.save_model(model, 'my_model.keras')`. \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m96/96\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m231s\u001b[0m 2s/step - accuracy: 0.7743 - loss: 0.6774 - val_accuracy: 0.7742 - val_loss: 0.6984\n",
+      "Epoch 2/10\n",
+      "\u001b[1m96/96\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 2s/step - accuracy: 0.7964 - loss: 0.6355"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:absl:You are saving your model as an HDF5 file via `model.save()` or `keras.saving.save_model(model)`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')` or `keras.saving.save_model(model, 'my_model.keras')`. \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m96/96\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m237s\u001b[0m 2s/step - accuracy: 0.7964 - loss: 0.6354 - val_accuracy: 0.7830 - val_loss: 0.6785\n",
+      "Epoch 3/10\n",
+      "\u001b[1m96/96\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m333s\u001b[0m 3s/step - accuracy: 0.8065 - loss: 0.6018 - val_accuracy: 0.7801 - val_loss: 0.6648\n",
+      "Epoch 4/10\n",
+      "\u001b[1m96/96\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 2s/step - accuracy: 0.7952 - loss: 0.6199"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:absl:You are saving your model as an HDF5 file via `model.save()` or `keras.saving.save_model(model)`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')` or `keras.saving.save_model(model, 'my_model.keras')`. \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m96/96\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m257s\u001b[0m 3s/step - accuracy: 0.7954 - loss: 0.6196 - val_accuracy: 0.7947 - val_loss: 0.6531\n",
+      "Epoch 5/10\n",
+      "\u001b[1m96/96\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 2s/step - accuracy: 0.8197 - loss: 0.5732"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:absl:You are saving your model as an HDF5 file via `model.save()` or `keras.saving.save_model(model)`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')` or `keras.saving.save_model(model, 'my_model.keras')`. \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m96/96\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m223s\u001b[0m 2s/step - accuracy: 0.8197 - loss: 0.5732 - val_accuracy: 0.7977 - val_loss: 0.6438\n",
+      "Epoch 6/10\n",
+      "\u001b[1m96/96\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m245s\u001b[0m 2s/step - accuracy: 0.8245 - loss: 0.5434 - val_accuracy: 0.7947 - val_loss: 0.6339\n",
+      "Epoch 7/10\n",
+      "\u001b[1m96/96\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 2s/step - accuracy: 0.8226 - loss: 0.5475"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:absl:You are saving your model as an HDF5 file via `model.save()` or `keras.saving.save_model(model)`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')` or `keras.saving.save_model(model, 'my_model.keras')`. \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m96/96\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m205s\u001b[0m 2s/step - accuracy: 0.8227 - loss: 0.5474 - val_accuracy: 0.8035 - val_loss: 0.6261\n",
+      "Epoch 8/10\n",
+      "\u001b[1m96/96\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 2s/step - accuracy: 0.8273 - loss: 0.5279"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:absl:You are saving your model as an HDF5 file via `model.save()` or `keras.saving.save_model(model)`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')` or `keras.saving.save_model(model, 'my_model.keras')`. \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m96/96\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m211s\u001b[0m 2s/step - accuracy: 0.8274 - loss: 0.5278 - val_accuracy: 0.8065 - val_loss: 0.6165\n",
+      "Epoch 9/10\n",
+      "\u001b[1m96/96\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m207s\u001b[0m 2s/step - accuracy: 0.8413 - loss: 0.5194 - val_accuracy: 0.7947 - val_loss: 0.6121\n",
+      "Epoch 10/10\n",
+      "\u001b[1m96/96\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 2s/step - accuracy: 0.8498 - loss: 0.4833"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:absl:You are saving your model as an HDF5 file via `model.save()` or `keras.saving.save_model(model)`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')` or `keras.saving.save_model(model, 'my_model.keras')`. \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m96/96\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m210s\u001b[0m 2s/step - accuracy: 0.8497 - loss: 0.4834 - val_accuracy: 0.8123 - val_loss: 0.6041\n"
+     ]
+    }
+   ],
+   "source": [
+    "callbacks = [\n",
+    "    keras.callbacks.ModelCheckpoint(\n",
+    "        \"xception_v1_{epoch:02d}_{val_accuracy:.3f}.h5\",\n",
+    "        monitor=\"val_accuracy\",\n",
+    "        save_best_only=True,\n",
+    "        mode='max'\n",
+    "    )\n",
+    "]\n",
+    "\n",
+    "history_0_001 = model.fit(train_ds, epochs=10, validation_data=val_ds, callbacks=callbacks)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f43dbc46",
+   "metadata": {},
+   "source": [
+    "## Добавление дополнительного слоя"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "a1f36efa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inputs = keras.Input(shape=(150,150,3))\n",
+    "base = base_model(inputs, training=False)\n",
+    "vector = keras.layers.GlobalAveragePooling2D()(base)\n",
+    "\n",
+    "inner = keras.layers.Dense(100, activation='relu')(vector)\n",
+    "outputs = keras.layers.Dense(10)(inner)\n",
+    "\n",
+    "model = keras.Model(inputs, outputs)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "408e7a68",
+   "metadata": {},
+   "source": [
+    "## Добавление регуляризации и отсева"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "d104f957",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inputs = keras.Input(shape=(150,150,3))\n",
+    "base = base_model(inputs, training=False)\n",
+    "vector = keras.layers.GlobalAveragePooling2D()(base)\n",
+    "\n",
+    "inner = keras.layers.Dense(100, activation='relu')(vector)\n",
+    "drop = keras.layers.Dropout(0.2)(inner)\n",
+    "outputs = keras.layers.Dense(10)(drop)\n",
+    "\n",
+    "model = keras.Model(inputs, outputs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9bc72366",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# обновим функцию make_model\n",
+    "def make_model(learning_rate, drop_rate):\n",
+    "    base_model = Xception(\n",
+    "        weights = 'imagenet',\n",
+    "        include_top=False,\n",
+    "        input_shape=(150,150,3)\n",
+    "    )\n",
+    "\n",
+    "    base_model.trainable = False\n",
+    "\n",
+    "    inputs = keras.Input(shape=(150,150,3))\n",
+    "    base = base_model(inputs, training=False)\n",
+    "    vector = keras.layers.GlobalAveragePooling2D()(base)\n",
+    "\n",
+    "    inner = keras.layers.Dense(100, activation='relu')(vector)\n",
+    "    drop = keras.layers.Dropout(drop_rate)(inner)\n",
+    "    outputs = keras.layers.Dense(10)(drop)\n",
+    "\n",
+    "    model = keras.Model(inputs, outputs)\n",
+    "\n",
+    "    optimizer = keras.optimizers.Adam(learning_rate)\n",
+    "    loss = keras.losses.CategoricalCrossentropy(from_logits=True)\n",
+    "\n",
+    "    model.compile(\n",
+    "        optimizer=optimizer,\n",
+    "        loss=loss,\n",
+    "        metrics=['accuracy']\n",
+    "    )\n",
+    "\n",
+    "    return model\n"
    ]
   }
  ],
